--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,26 +73,35 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .inicio-info{
     margin-left: 100px;
     color: #fff;
+    width: 100%;
+    max-width: 600px;
 }
 
 .inicio-img{
-    margin-right: 100px;
+    margin-right: 10px;
+}
+
+.inicio-img img{
+
 }
 
 .inicio-section h2{
     font-family: "Quicksand", serif;
-    font-size: 70px;
+    font-size: 60px;
     letter-spacing: 2px;
 }
 
 .inicio-section p{
     font-family: "Quicksand", serif;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 100;
 }
 
@@ -108,6 +117,45 @@ header {
 
 /* SOBRE STYLE */
 
+.sobre{
+    font-family: "Quicksand", serif;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: #000; 
+    padding: 50px;
+    box-sizing: border-box;
+}
+
+.sobre-container{
+    color: antiquewhite;
+    display: flex;
+}
+
+.sobre-text{
+    
+}
+
+.sobre-info{
+    width: 100%;
+    max-width: 600px;
+    text-align: center;
+    margin: 0 20px;
+}
+
+.sobre h2{
+    font-size: 50px;
+    margin-bottom: 5px;
+}
+
+.sobre p{
+    margin-top: 0;
+}
+
+.sobre-info h3{
+    font-size: 15px;
+    font-weight: lighter;
+}
 
 /* PROJETOS STYLE */
 
@@ -172,5 +220,45 @@ header {
         top: 1px; 
     }
 
-    /*  FIM RESPONSIVIDADE HEADER */
+    .git-icon {
+        display: none;
+    }
+
+    /* RESPONSIVIDADE  INICIO */
+
+    .inicio-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #000;
+        
+    }
+
+    .inicio-info {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+        margin-top: 90px;
+    }
+
+    .inicio-img {
+        text-align: center;
+        width: 100%;
+    }
+
+    .inicio-container h2{
+        font-size: 40px;
+    }
+
+    .inicio-container p{
+        font-size: 15px;
+    }
+
+}
+
+@media (max-width: 480px){
+    .inicio-info, .inicio-img {
+        margin-bottom: 10px;
+        width: 100%;
+    }
 }
