--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,83 +79,157 @@ header {
 }
 
 .inicio-info{
-    margin-left: 100px;
+    margin-left: 190px;
     color: #fff;
-    width: 100%;
-    max-width: 600px;
+    width: 60%;
+    margin-bottom: 100px;
 }
 
 .inicio-img{
-    margin-right: 10px;
+    margin-right: 100px;
+    margin-bottom: 100px;
 }
 
 .inicio-img img{
-
+    width: 180px;
+    height: auto;
 }
 
 .inicio-section h2{
     font-family: "Quicksand", serif;
-    font-size: 60px;
+    font-size: 50px;
     letter-spacing: 2px;
 }
 
 .inicio-section p{
     font-family: "Quicksand", serif;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 100;
 }
 
 .inicio-section a{
     font-family: "Quicksand", serif;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: lighter;
     cursor: pointer;
     transition: transform 0.3s ease;
     color: rgb(191, 40, 40);
 }
 
-/* SOBRE STYLE */
+.download-link{
+    color: rgb(191, 40, 40);
+    list-style: none;
+}
 
-.sobre{
-    font-family: "Quicksand", serif;
+.home-socials {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-30%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #333;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    z-index: 999;
+    padding: 10px 0;
+    width: 78px;
+    border-radius: 20px;
+    height: 240px;
+}
+
+
+.home-social {
     display: flex;
     justify-content: center;
-    min-height: 100vh;
-    background-color: #000; 
-    padding: 50px;
-    box-sizing: border-box;
+    width: 5rem;
+    height: 5rem;
+    margin: 10px 0;
+    transition: transform 0.3s ease;
 }
 
-.sobre-container{
-    color: antiquewhite;
+
+.home-social i {
+    font-size: 40px;
+    color:  rgb(191, 40, 40);
+}
+
+.home-social-icon-link:hover {
+    transform: scale(1.2);
+}
+
+/* SOBRE STYLE */
+
+.about{
+    font-family: "Quicksand", serif;
     display: flex;
-}
-
-.sobre-text{
-    
-}
-
-.sobre-info{
-    width: 100%;
-    max-width: 600px;
+    padding: 45px;
+    margin:auto;
+    justify-content: center;
+    min-height: 100vh;
+    box-sizing: border-box;
+    background-image: url('/assets/img/159480785_00c3a587-63c5-4e11-bf1f-c256fd88c687.jpg');
     text-align: center;
-    margin: 0 20px;
+    color: antiquewhite;
 }
 
-.sobre h2{
-    font-size: 50px;
-    margin-bottom: 5px;
+
+.intro{
+    align-items: center;
+    margin-top: -250px;
 }
 
-.sobre p{
-    margin-top: 0;
+.intro img{
+    padding-bottom: -100px;
 }
 
-.sobre-info h3{
-    font-size: 15px;
-    font-weight: lighter;
+.intro-info{
+
 }
+
+.intro h2 {
+    font-size: 4rem;
+    margin-bottom: 10px;
+}
+
+.intro p {
+    font-size: 1rem;
+  }
+
+.info-container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-top: 150px;
+}
+
+.card{
+    background: #333;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 20px;
+    flex: 1;
+    min-width: 250px;
+    max-width: 48%;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+.card h2{
+    margin-bottom: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.card p{
+    font-size: 0.9rem;
+}
+
+
+
 
 /* PROJETOS STYLE */
 
@@ -189,7 +263,7 @@ header {
 /* RESPONSIVIDADE STYLE */
 
 
-@media (max-width: 768px) {
+@media (max-width: 480px) {
     
     /* RESPONSIVIDADE HEADER */
 
@@ -254,11 +328,28 @@ header {
         font-size: 15px;
     }
 
+
+    /* RESPONSIVIDADE SOBRE */
+
+    
+    .intro h1 {
+        font-size: 1.5rem;
+    }
+      
+    .intro p {
+        font-size: 0.9rem;
+    }
+      
+    .info-container {
+        flex-direction: column;
+        gap: 15px;
+    }
+      
+    .card {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+    
 }
 
-@media (max-width: 480px){
-    .inicio-info, .inicio-img {
-        margin-bottom: 10px;
-        width: 100%;
-    }
-}
+
