--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,10 +164,10 @@ header {
 .about{
     font-family: "Quicksand", serif;
     display: flex;
-    padding: 45px;
-    margin:auto;
+    margin: 0;
     justify-content: center;
     min-height: 100vh;
+    max-width: 100%;
     box-sizing: border-box;
     background-image: url('/assets/img/159480785_00c3a587-63c5-4e11-bf1f-c256fd88c687.jpg');
     text-align: center;
@@ -176,16 +176,20 @@ header {
 
 
 .intro{
-    align-items: center;
-    margin-top: -250px;
+    display: inline;
 }
 
-.intro img{
-    padding-bottom: -100px;
+.intro-img {
+    object-fit: cover;
+    margin-top: 40px;
+}
+.intro-img:hover {
+    animation: wobble 0.5s ease-in-out;
+    transform-origin: center;
 }
 
 .intro-info{
-
+    margin-top: -68px;
 }
 
 .intro h2 {
@@ -200,36 +204,139 @@ header {
 .info-container{
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
-    gap: 20px;
+    gap: 50px;
     flex-wrap: wrap;
-    margin-top: 150px;
+    margin-top: 100px;
+    padding: 10px 10px;
 }
 
-.card{
+.card-1{
     background: #333;
     border: 2px solid #fff;
     border-radius: 10px;
     padding: 20px;
-    flex: 1;
     min-width: 250px;
-    max-width: 48%;
+    max-width: 500px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+    overflow: hidden;
+}
+
+.card-2{
+    background: #333;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
+    max-width: 470px;
+}
+
+.card-1-title{
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: -2px;
+    justify-content: center;
+}
+.card-description{
+    justify-content: left;
+    text-overflow: ellipsis;
+    text-align: justify;
+    line-height: 3;
+}
+
+.card-2-title{
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: -2px;
+    justify-content: center;
+}
+
+.icon-txt{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    gap: 7.5px;
+}
+
+.icon-txt i{
+    font-size: 20px;
+}
+
+
+
+/*SKILLS TECHNOLOGIES STYLE*/
+
+.skills-tech{
+    text-align: center;
+    margin: 0 auto;
+    background-color: #000;
+    color: #fff;
+    font-family: "Quicksand", serif;
+    min-height: 100vh;
+}
+
+.skills-info{
+
+}
+
+.tagline {
+    font-size: 0.9rem;
+    letter-spacing: 1px;
+    color: #aaa;
+    margin-bottom: 10px;
+}
+  
+h1 {
+    font-size: 2.5rem;
     margin-bottom: 20px;
 }
+  
+.description {
+    font-size: 1rem;
+    margin-bottom: 20px;
+    color: #ccc;
+}
 
-.card h2{
+a {
+    color: #ffa500;
+    text-decoration: none;
+}
+  
+a:hover {
+    text-decoration: underline;
+}
+
+.icons-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.icon{
+    text-align: center;
+    flex: 1 1 calc(25% - 20px);
+    max-width: 150px;
+}
+
+.icon img {
+    width: 100%;
+    max-width: 80px;
     margin-bottom: 10px;
-    font-size: 1.2rem;
-    font-weight: bold;
+    filter: grayscale(100%);
+    transition: filter 0.3s ease;
 }
 
-.card p{
+.icon img:hover {
+    filter: grayscale(0%);
+}
+  
+.icon p {
     font-size: 0.9rem;
+    margin-top: 5px;
 }
-
-
-
 
 /* PROJETOS STYLE */
 
@@ -260,11 +367,15 @@ header {
 
 
 
-/* RESPONSIVIDADE STYLE */
+/* MEDIA QUERIES */
 
 
-@media (max-width: 480px) {
+@media screen and (max-width: 576px) {
     
+    html, body{
+        overflow-x: hidden;
+    }
+
     /* RESPONSIVIDADE HEADER */
 
     .nav-links {
@@ -300,9 +411,11 @@ header {
 
     /* RESPONSIVIDADE  INICIO */
 
+    .inicio-section{
+        flex-wrap: wrap;
+    }
+
     .inicio-container {
-        display: flex;
-        flex-direction: column;
         align-items: center;
         background-color: #000;
         
@@ -350,6 +463,22 @@ header {
         margin: 0 auto;
     }
     
+}
+
+ /* Keyframes for the wobble animation */
+@keyframes wobble {
+    0%, 100% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(-5deg);
+    }
+    50% {
+        transform: rotate(5deg);
+    }
+    75% {
+        transform: rotate(-5deg);
+    }
 }
 
 
