--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,13 +86,16 @@ header {
 }
 
 .inicio-img{
-    margin-right: 100px;
-    margin-bottom: 100px;
+    margin: 80px;
+    margin-top: -50px;
 }
 
-.inicio-img img{
+.profile-img{
     width: 180px;
     height: auto;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2), 0 5px 5px rgba(0, 0, 0, 0.15);
+    transform: translateY();
+    animation: float 3s ease-in-out infinite;
 }
 
 .inicio-section h2{
@@ -137,6 +140,7 @@ header {
     width: 78px;
     border-radius: 20px;
     height: 240px;
+    
 }
 
 
@@ -169,7 +173,7 @@ header {
     min-height: 100vh;
     max-width: 100%;
     box-sizing: border-box;
-    background-image: url('/assets/img/159480785_00c3a587-63c5-4e11-bf1f-c256fd88c687.jpg');
+    background-image: url('/assets/img/img-normal/159480785_00c3a587-63c5-4e11-bf1f-c256fd88c687.jpg');
     text-align: center;
     color: antiquewhite;
 }
@@ -238,6 +242,7 @@ header {
     margin-top: -2px;
     justify-content: center;
 }
+
 .card-description{
     justify-content: left;
     text-overflow: ellipsis;
@@ -264,7 +269,6 @@ header {
 }
 
 
-
 /*SKILLS TECHNOLOGIES STYLE*/
 
 .skills-tech{
@@ -274,10 +278,17 @@ header {
     color: #fff;
     font-family: "Quicksand", serif;
     min-height: 100vh;
+    padding: 40px 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .skills-info{
-
+    max-width: 100%;
+    margin-bottom: 30px;
 }
 
 .tagline {
@@ -299,33 +310,40 @@ h1 {
 }
 
 a {
-    color: #ffa500;
+    color: crimson;
     text-decoration: none;
 }
   
-a:hover {
-    text-decoration: underline;
-}
 
 .icons-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 30px;
+    display: grid;
+    align-items: center;
+    gap: 30px;
+    grid-template-columns: repeat(5, 1fr);
 }
 
 .icon{
     text-align: center;
-    flex: 1 1 calc(25% - 20px);
-    max-width: 150px;
+    max-width: 120px;
+    font-size: 4rem;
+    margin: 0 auto;
+}
+
+.icon i {
+    font-size: 4rem; /* Aumenta o tamanho dos ícones */
+    color: white;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.icon i:hover {
+    transform: scale(1.2); /* Efeito de aumento no hover */
+    color: #fff;
 }
 
 .icon img {
     width: 100%;
     max-width: 80px;
     margin-bottom: 10px;
-    filter: grayscale(100%);
     transition: filter 0.3s ease;
 }
 
@@ -334,12 +352,95 @@ a:hover {
 }
   
 .icon p {
-    font-size: 0.9rem;
-    margin-top: 5px;
+    font-size: 1rem;
+    margin-top: 10px;
 }
 
 /* PROJETOS STYLE */
 
+.projects{
+    max-width: 100%;
+    max-height: 100vh;
+    background: url('/assets/img/img-normal/159480785_00c3a587-63c5-4e11-bf1f-c256fd88c687.jpg');
+    font-family: "Quicksand", serif;
+}
+
+.projects-container{
+    background-size: cover;
+    padding: 2rem;
+    text-align: center;
+}
+
+.project-info{
+    margin-bottom: 2rem;
+    color: white;
+}
+
+.project-info h1 {
+    font-size: 3.5rem;
+    margin-bottom: 1rem;
+}
+
+.project-info p {
+    font-size: 1rem;
+    line-height: 1.6;
+}
+
+.box-cards{
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+
+.project-flip-card {
+    perspective: 1000px;
+    width: 250px;
+    height: 250px;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+
+  
+.card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+}
+  
+.project-flip-card:hover .card-inner {
+    transform: rotateY(180deg);
+}
+  
+.card-front, .card-back {
+    position: absolute;
+    backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+  
+.card-front {
+    background: #007BFF;
+    color: white;
+}
+  
+.card-back {
+    background: #f4f4f4;
+    color: black;
+    transform: rotateY(180deg);
+    font-size: 1.2rem;
+    padding: 1rem;
+    text-align: center;
+}
+  
 
 /* CONTATO STYLE */
 
@@ -465,7 +566,7 @@ a:hover {
     
 }
 
- /* Keyframes for the wobble animation */
+/* Keyframes Animations */ 
 @keyframes wobble {
     0%, 100% {
         transform: rotate(0deg);
@@ -482,3 +583,11 @@ a:hover {
 }
 
 
+@keyframes float {
+    0%, 100% {
+      transform: translateY(0); /* Posição inicial */
+    }
+    50% {
+      transform: translateY(-15px); /* Sobe 15px */
+    }
+  }
