--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,17 +76,18 @@ header {
     min-height: 100vh;
     padding: 20px;
     box-sizing: border-box;
+    flex-wrap: wrap;
 }
 
 .inicio-info{
-    margin-left: 190px;
     color: #fff;
+    text-align: center;
     width: 60%;
-    margin-bottom: 100px;
+    margin: 0 auto 20px;
 }
 
 .inicio-img{
-    margin: 80px;
+    text-align: center;
     margin-top: -50px;
 }
 
@@ -94,28 +95,20 @@ header {
     width: 180px;
     height: auto;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2), 0 5px 5px rgba(0, 0, 0, 0.15);
-    transform: translateY();
     animation: float 3s ease-in-out infinite;
 }
 
-.inicio-section h2{
-    font-family: "Quicksand", serif;
+.inicio-section h2{   
     font-size: 50px;
     letter-spacing: 2px;
 }
 
-.inicio-section p{
-    font-family: "Quicksand", serif;
+.inicio-section p, a{
     font-size: 16px;
-    font-weight: 100;
 }
 
 .inicio-section a{
-    font-family: "Quicksand", serif;
     text-decoration: none;
-    font-size: 16px;
-    font-weight: lighter;
-    cursor: pointer;
     transition: transform 0.3s ease;
     color: rgb(191, 40, 40);
 }
@@ -176,6 +169,9 @@ header {
     background-image: url('/assets/img/img-normal/159480785_00c3a587-63c5-4e11-bf1f-c256fd88c687.jpg');
     text-align: center;
     color: antiquewhite;
+    overflow: hidden;
+    padding: 50px 20px;
+    flex-wrap: wrap;
 }
 
 
@@ -456,7 +452,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-     width: 100%;
+    width: 100%;
 }
 
 .card-form{
@@ -465,13 +461,14 @@ a {
     width: 400px;
     border-radius: 12px; 
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15); 
-    border: 3px solid red; 
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border: 2px solid  red; 
+    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
 }
 
 .card-form:hover {
     transform: translateY(-5px); 
-    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25); 
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25);
+    
 }
 
 form {
@@ -489,16 +486,39 @@ form input {
     margin-bottom: 1rem;
     padding: 0.8rem;
     font-size: 1rem;
-    border: 2px solid #ddd;
+    border: 2px solid #898787;
     border-radius: 8px;
     outline: none;
     transition: border-color 0.3s ease;
+    background-color: #f9f9f9;
+    color: #333;
 }
   
 form input:focus {
     border-color: red; 
+    background-color: #fff;
 }
 
+.btn-form {
+    padding: 0.8rem;
+    background-color: #ff0000;
+    color: #fff;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.btn-form:hover {
+    background-color: #d40000; 
+    transform: scale(1.05);
+}
+
+.contact-section h1{
+    color: #f9f9f9;
+    font-family: "Quicksand", serif;
+}
 
 /* FOOTER */
 
@@ -509,7 +529,7 @@ footer {
     text-align: center;
     padding: 20px 0;
     font-size: 14px;
-    position: relative; /* Permite posicionar elementos dentro do footer */
+    position: relative; 
     text-align: center;
 }
 
@@ -612,6 +632,13 @@ footer {
         background-color: #000;
         width: 200px;
         border-radius: 5px;
+        position: fixed;
+        width: 100%;
+        top: 0;
+        right: 0;
+        justify-content: center;
+        align-items: center;
+        transition: transform 0.3s ease; 
     }
 
     .nav-links.active {
@@ -620,6 +647,18 @@ footer {
 
     .hamburger-menu {
         display: block;
+        top: 20px;
+        right: 20px;
+        z-index: 1001;
+    }
+
+    .logo-img{
+        width: 80px; 
+        height: auto;
+        position: fixed; 
+        margin-top: -50px;
+        margin-left: -20px;
+        z-index: 1000;
     }
 
     .logo img {
@@ -638,23 +677,21 @@ footer {
 
     .inicio-section{
         flex-wrap: wrap;
+        width: 100%;
     }
 
     .inicio-container {
         align-items: center;
-        background-color: #000;
-        
+        flex-direction: column;
     }
 
     .inicio-info {
         width: 100%;
         text-align: center;
-        margin-bottom: 20px;
         margin-top: 90px;
     }
 
     .inicio-img {
-        text-align: center;
         width: 100%;
     }
 
@@ -666,10 +703,13 @@ footer {
         font-size: 15px;
     }
 
+    .home-socials{
+        display: none;
+    }
 
-    /* RESPONSIVIDADE SOBRE */
 
-    
+    /* RESPONSIVIDADE ABOUT */
+
     .intro h1 {
         font-size: 1.5rem;
     }
@@ -681,6 +721,7 @@ footer {
     .info-container {
         flex-direction: column;
         gap: 15px;
+        width: 100%;
     }
       
     .card {
