--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ header {
     font-family: "Quicksand", serif;
     top: 0;
     z-index: 1000;
-    box-shadow: 0 4px 6px rgba(62, 59, 59, 0.436);
+    
 }
 
 .logo {
@@ -31,6 +31,7 @@ header {
     max-width: 100px;
     height: auto;
 }
+
 
 
 .nav-links {
@@ -127,13 +128,13 @@ header {
 }
 
 .inicio-section h2{   
-    font-size: 50px;
+    font-size: 4rem;
     letter-spacing: 2px;
 }
 
 
 .inicio-section p, a{
-    font-size: 16px;
+    font-size: 1.2rem;
 }
 
 .inicio-section a{
@@ -244,7 +245,7 @@ header {
     border: 2px solid #fff;
     border-radius: 10px;
     padding: 20px;
-    width: 500px; /* Define a mesma largura para ambos os cards */
+    width: 500px; 
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 40px;
     overflow: hidden;
@@ -256,6 +257,7 @@ header {
     font-weight: bold;
     margin-top: -2px;
     justify-content: center;
+    align-items: center;
 }
 
 .card-description{
@@ -296,7 +298,9 @@ header {
     color: #000;
 }
 
-
+.highlight {
+    color: #59E889;
+}
 
 
 /*SKILLS TECHNOLOGIES STYLE*/
@@ -392,7 +396,6 @@ a {
 
 .projects{
     max-width: 100%;
-    max-height: 100vh;
     background: url('/assets/img/img-normal/159480785_00c3a587-63c5-4e11-bf1f-c256fd88c687.jpg');
     font-family: "Quicksand", serif;
 }
