--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,14 +1,10 @@
-
-body{
+body, html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-html{
-    height: 100vh;
+    font-family: "Quicksand", serif;
     scroll-behavior: smooth;
-}
+  }
 
 
 
