--- a/assets/css/responsiveness.css
+++ b/assets/css/responsiveness.css
@@ -6,23 +6,27 @@
         overflow-x: hidden;
     }
 
-    /* RESPONSIVIDADE HEADER */
+    
 
+    /* HEADER STYLE */
     .nav-links {
         display: none;
         flex-direction: column;
         width: 100%;
         border-radius: 2px;
-        position: absolute;
-        top: 60px;   
+        position: absolute; 
         align-items: end;
         transition: transform 0.5s ease;
         z-index: 1000; 
         margin-left: -10px;
+        background: rgba(0, 0, 0, 0.9); 
+        align-items: center;
     }
 
     .nav-links.active {
         display: flex;
+        position: fixed;
+        top: 0;
     }
 
     .hamburger-menu {
@@ -46,7 +50,6 @@
         margin-top: -50px;
         margin-left: -20px;
         z-index: 1000;
-
     }
 
     .logo {
@@ -60,8 +63,8 @@
         margin-left: 15px;
     }
 
-    /* RESPONSIVIDADE  INICIO */
 
+    /* INICIO STYLE */
     .inicio-section{
         flex-wrap: wrap;
         width: 100%;
@@ -80,7 +83,7 @@
         margin-top: 20px; 
         text-align: center;
         justify-content: center;
-        margin-left: -2px;
+        margin-left: -110px;
     }
 
     .inicio-img {
@@ -107,6 +110,7 @@
 
     .inicio-container p{
         font-size: 15px;
+    
     }
 
     .home-socials{
@@ -114,40 +118,15 @@
     }
 
 
-    /* RESPONSIVIDADE ABOUT */
-
-    .intro h1 {
-        font-size: 1.5rem;
-    }
-      
-    .intro p {
-        font-size: 0.9rem;
-    }
-      
-    .info-container {
-        flex-direction: column;
-        gap: 15px;
-        width: 100%;
-        align-items: center;
-    }
-      
-    .card {
-        width: 50%;
+    /* ABOUT STYLE */
+    .card-title{
+        font-size: 2.5rem;
     }
 
 
-    /* RESPONSIVIDADE PROJECTS */
-
+    /* PROJECTS STYLE */
     .projects{
         display: flex;
-    }
-
-    .project-container{
-        
-    }
-
-    .box-cards{
-        flex-direction: row;
     }
     
 }
@@ -155,53 +134,136 @@
 
 @media screen and (max-width: 420px){
 
-    html, body{
-        overflow-x: hidden;
-    }
-
-    /* RESPONSIVIDADE  INICIO */
-
-    .inicio-section{
-        flex-wrap: wrap;
-        width: 100%;
-    }
-
-    .inicio-container {
-        width: 100%;
-    }
-
-    .inicio-info {
-       margin-right: -100px;
-    }
-
-    .inicio-img {
-        width: 100%;
-        display: none;
-    }
-
-    .media-response{
-        margin-bottom: 20px;
+    /* CONTACT STYLE */
+    .contact-form{
         display: flex;
-        margin-right: 500px;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .card-form{
+        width: 80%;
+    }
+
+    .contact-info-call{
+        align-items: center;
         justify-content: center;
     }
 
-    .media-response img{
-        width: 150px;
-        height: auto;
+    .contact-info-call h1{
+        font-size: 2rem;
+    }
+  
+}
+
+
+@media screen and (max-width: 2560px) {
+    
+    /* ABOUT STYLE */
+    .info-container{
+        margin-bottom: 50px;
     }
 
-    .inicio-container h2{
-        
+    /* CONTACT STYLE */
+    .contact-section{
+        height: 600px;
     }
 
-    .inicio-container p{
-        
+    .contact-form{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
 
-    .home-socials{
-        
+    .contact-info-call{
+        align-items: center;
+        justify-content: center;
+
     }
 
+    .contact-info-call h1{
+        font-size: 2rem;
+    }
 
 }
+
+@media screen and (max-width: 320px){
+
+    /*  INICIO STYLE */
+    .inicio-info {
+        justify-content: center;
+        align-items: center;
+        justify-items: center; 
+    }
+
+    .media-response{
+        margin-left: -20px;
+        margin-bottom: -50px;
+    }
+
+
+    /* ABOUT STYLE */
+    .card-2-title{
+        font-size: 2.5rem;
+    }
+
+
+    /* PROJECTS STYLE */
+    .project-info{
+        max-width: 90%;
+    }
+
+    .box-cards{
+        max-width: 90%;
+    }
+
+
+    /* CONTACT STYLE */
+    .contact-info-call h1{
+        font-size: 1.7rem;
+    }
+
+}
+
+
+/* RESPONSIVIDADE SKILLS & TECHNOLOGIES*/
+@media screen and (max-width: 768px) {
+    .skills-info {
+        margin-bottom: 20px;
+    }
+
+    .icons-container {
+        gap: 25px;
+    }
+
+    .icon i{
+        font-size: 3rem;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .skills-tech {
+        padding: 20px 10px;
+    }
+
+    .icons-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+
+@media  screen and (max-width: 425px) {
+    
+    .inicio-container{
+        display: grid;
+    }
+
+    .inicio-info{
+        margin-left: -100px;
+    }
+    
+}
+
+
